css/style.css
@import url('https://fonts.googleapis.com/css?family=Permanent+Marker|Reenie+Beanie');

body {
  background-color: black;
  background-image: url(http://www.geckosadventures.com/tales/wp-content/uploads/2017/04/istock-travel-backpacker.jpg);
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding-bottom: 300px;
}

header {
  background-color: black;
  color: white;
  text-align: center;
  height: 100px;
  padding-top: 20px;
  padding-bottom: 40px;
}

header>section {
  text-align: center;
}

#trips {
  text-align: center;
  margin-top: 5%;
}

#trips h1, #reserve h2 {
  color: white;
  font-family: 'Permanent Marker', cursive;
  text-shadow: 3px 3px black;
  font-size: 3.0rem;
  padding: 0;
}

#trips>button, #reserveForm section button {
  display: block;
  width: 100%;
  margin: 2% auto;
  background-color: black;
}

#filter {
  margin-top: 1%;
  background-color: white;
  opacity: 0.9;
  padding-bottom: 10px;
}

#list {
  margin-top: 15%;
  text-align: center;
}

main {
  margin-top: 10px;
  margin-left: 5%;
  margin-right: 5%;
}

.share {
  display: inline-flex;
}

.share input {
  min-width: 200px;
}

.share button {
  /*padding: 0 4%;*/
  background-color: black;
}

.share button:hover, .share button:focus {
  background-color: black;
}

.tripBlock {
  background-color: white;
  margin: 1% 0;
}

.tripBlock * {
margin-bottom: 0;
}

.tripBlock h3{
  color: black;
}

.tripBlock:hover {
  opacity: 0.7;
}

.button {
  font-size: 1.3em;
  padding: 2% 4%;
}

#trip {
  background-color: white;
  padding: 0 1%;
  margin: 15% 0;
}

.detail {
  margin: 0 5%;
  padding: 1% 0 2% 0;
}

#reserve {
  margin: 4.6% 0;
  background-color: yellow;
  padding-bottom: 2%;
  text-align: center;
}

